# zakhar_core

./: .gitignore  README.md  eye.py  motors.py  oled.py  pyproject.toml  start.py  tests.py
proto/: bird_shadow_detection.py  common_object_impl.py
r_giskard/: __init__.py  base_part.py  conscious.py  responses.py  subconscious.py
tests/: __init__.py  common.py  imports.py  test_device_integration.py  test_device_unit.py  test_zakhar_core.py
zakhar_core/: __init__.py  eye.py  i2c.py  lizard_mind.py  motors.py  oled.py  zk_commands.py  zk_common.py  zk_programs.py
zakhar_core/common_object/: __init__.py  common_object.py
zakhar_core/devices/: README.md  __init__.py  common.py  eye.py  face.py  motors.py  oled.py
zakhar_core/i2c/: __init__.py  i2c.py  zakhar_i2c_device.py
zakhar_core/logging/: __init__.py  log_funcs.py
zakhar_core/r_giskard/: README.md  __init__.py  conscious.py  mind.py  mind2.py  mind3.py  mind4.py  responses.py  subconscious.py
